--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 button {
-    background-color: #0c80f3;
-    border: 6px solid #0ff166;
+    background-color: rgb(187red, 8, 38);
+    border: 6px solid rgb(252, 198, 10);
     border-radius: 10px;
     width: 150px;
   }
